feat: add dev tools

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,2 @@
-root=true
-
-[*]
-indent_style=space
-indent_size=2
-end_of_line=lf
-charset=utf-8
-trim_trailing_whitespace=true
-
-[*.py]
-indent_size = 4
-
-[Makefile]
-indent_style = tab
+[*.sh]
+shell_variant = bash
