feat(configs): tmux add vim mode

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -5,6 +5,7 @@ set -g focus-events on
 set -g clock-mode-style 12
 set -g history-limit 20000
 set -g mouse on
+setw -g mode-keys vi
 
 set -g base-index 1
 setw -g pane-base-index 1
