feat(clipboard): replace xclip with wl-clipboard

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -36,7 +36,7 @@ bind '"' split-window -v -c '#{pane_current_path}'
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 # bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel pbcopy
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -i -sel clip > /dev/null'
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel wl-copy
 
 set -g message-style bg='default',fg='magenta'
 set -g mode-style 'reverse'
