--- a/misc/dconf/org-gnome-shell-extensions.conf
+++ b/misc/dconf/org-gnome-shell-extensions.conf
@@ -1,16 +1,29 @@
+[battery_usage_wattmeter]
+combine-batteries=false
+hide-na=true
+interval=5
+pad-single-digit=false
+show-minus-sign=false
+
+[fw-fanctrl-revived]
+refresh-interval=5
+
 [mullvadindicator]
-refresh-time=600
+refresh-time=15
 show-icon=false
 show-icon-only-when-connected=true
 show-menu=true
 show-server=true
 subtitle-text=uint32 0
 
+[nightthemeswitcher/commands]
+enabled=false
+
 [nightthemeswitcher/time]
 manual-schedule=true
 nightthemeswitcher-ondemand-keybinding=['<Control><Super>t']
 sunrise=6.0
-sunset=18.0
+sunset=20.0
 
 [space-bar/appearance]
 application-styles='.space-bar {\n  -natural-hpadding: 0px;\n}\n\n.space-bar-workspace-label.active {\n  margin: 0 4px;\n  background-color: rgba(255,255,255,0.3);\n  color: rgba(255,255,255,1);\n  border-color: rgba(0,0,0,0);\n  font-weight: 700;\n  border-radius: 4px;\n  border-width: 0px;\n  padding: 3px 8px;\n}\n\n.space-bar-workspace-label.inactive {\n  margin: 0 4px;\n  background-color: rgba(0,0,0,0);\n  color: rgba(255,255,255,1);\n  border-color: rgba(0,0,0,0);\n  font-weight: 700;\n  border-radius: 4px;\n  border-width: 0px;\n  padding: 3px 8px;\n}\n\n.space-bar-workspace-label.inactive.empty {\n  margin: 0 4px;\n  background-color: rgba(0,0,0,0);\n  color: rgba(255,255,255,0.5);\n  border-color: rgba(0,0,0,0);\n  font-weight: 700;\n  border-radius: 4px;\n  border-width: 0px;\n  padding: 3px 8px;\n}'
@@ -32,12 +45,21 @@ enable-activate-workspace-shortcuts=false
 [space-bar/state]
 version=33
 
+[system-monitor]
+show-swap=true
+
 [tactile]
-layout-3-col-2=0
-layout-3-col-3=0
+col-2=0
+col-3=0
+gap-size=0
+layout-2-col-3=0
+layout-2-row-2=0
+layout-3-col-2=1
+layout-3-col-3=1
 layout-3-row-2=0
-layout-4-col-2=0
-layout-4-col-3=0
-layout-4-row-1=0
-layout-4-row-2=0
-monitor-0-layout=1
+layout-4-col-2=1
+layout-4-col-3=1
+layout-4-row-1=1
+layout-4-row-2=1
+monitor-0-layout=4
+row-1=1
