--- a/misc/dconf/org-gnome-shell-extensions.conf
+++ b/misc/dconf/org-gnome-shell-extensions.conf
@@ -40,7 +40,9 @@ smart-workspace-names=false
 toggle-overview=true
 
 [space-bar/shortcuts]
-enable-activate-workspace-shortcuts=false
+back-and-forth=false
+enable-activate-workspace-shortcuts=true
+enable-move-to-workspace-shortcuts=true
 
 [space-bar/state]
 version=33
@@ -52,6 +54,8 @@ show-swap=true
 col-2=0
 col-3=0
 gap-size=0
+grid-cols=4
+grid-rows=3
 layout-2-col-3=0
 layout-2-row-2=0
 layout-3-col-2=1
@@ -59,7 +63,11 @@ layout-3-col-3=1
 layout-3-row-2=0
 layout-4-col-2=1
 layout-4-col-3=1
+layout-4-col-4=0
+layout-4-col-5=0
 layout-4-row-1=1
 layout-4-row-2=1
-monitor-0-layout=4
+layout-4-row-3=0
+layout-4-row-4=0
+monitor-0-layout=1
 row-1=1
