feat: change default sign in key

--- a/configs/ssh/.ssh/config
+++ b/configs/ssh/.ssh/config
@@ -3,5 +3,5 @@ Host *
   ServerAliveInterval 60
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/id_ed25519
-  IdentityFile ~/.ssh/id_ed25519_work
+  IdentityFile ~/.ssh/id_ed25519_legacy
   IdentityFile ~/.ssh/id_ed25519_nx
