feat(configs): mise add golang

--- a/configs/mise/.config/mise.toml
+++ b/configs/mise/.config/mise.toml
@@ -1,5 +1,5 @@
 [tools]
-crystal = 'latest'
+go = 'latest'
 node = { version = 'lts', postinstall = 'corepack enable' }
 python = 'latest'
 ruby = 'latest'
