feat(configs): mise add languages

--- a/configs/mise/.config/mise.toml
+++ b/configs/mise/.config/mise.toml
@@ -1,4 +1,6 @@
 [tools]
+erlang = 'latest'
+gleam = 'latest'
 go = 'latest'
 node = { version = 'lts', postinstall = 'corepack enable' }
 python = 'latest'
