feat(scripts): macos replace tmx with git-mux
Check more info about this amazing tool here:
https://github.com/benelan/git-mux

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -28,15 +28,15 @@ bind r source-file $HOME/.tmux.conf \; display 'Config reloaded!'
 bind * confirm-before -p 'kill other windows? (y/n)' 'kill-window -a'
 bind Q confirm-before -p 'kill-session #S? (y/n)' kill-session
 bind X confirm-before kill-server
-bind o neww "$SHELL -c 'tms'"
-bind C-c run-shell 'tmux display-message "Sessions: $(tms sessions)"'
+bind C-p new-window -c '#{pane_current_path}' git-mux project
+bind C-t new-window -c '#{pane_current_path}' git-mux task
 bind c new-window -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
 bind '"' split-window -v -c '#{pane_current_path}'
 
 bind -T copy-mode-vi v send-keys -X begin-selection
-# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel pbcopy
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel wl-copy
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel pbcopy
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel wl-copy
 
 set -g message-style bg='default',fg='magenta'
 set -g mode-style 'reverse'
