feat(configs): ghostty add font options

--- a/configs/ghostty/.config/ghostty/config
+++ b/configs/ghostty/.config/ghostty/config
@@ -1,3 +1,6 @@
+font-family = "IosevkaTerm NFM"
+font-feature = "-calt, -liga, -dlig"
+font-size = 16
 theme = light:papercolor-light, dark:papercolor-dark
 window-width = 100
 window-height = 30
