feat(configs): add tmux popup config and tool

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -38,6 +38,17 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel pbcopy
 # bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel wl-copy
 
+bind -n M-J display-popup -T ' +#S ' -h 60% -E tmux-popup
+bind -T popup M-J detach
+bind -T popup C-o copy-mode
+bind -T popup M-c new-window -c '#{pane_current_path}'
+bind -T popup M-n next-window
+bind -T popup M-m previous-window
+bind -T popup M-L run 'tmux move-window -a -t $TMUX_PARENT_SESSION:{next}'
+
+set -g popup-border-lines rounded
+set -g popup-border-style fg='magenta'
+
 set -g message-style bg='default',fg='magenta'
 set -g mode-style 'reverse'
 
