feat(configs): tmux udpate config

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -1,50 +1,54 @@
-set -g default-terminal 'tmux-256color'
-set -a terminal-overrides ',*256col*:RGB'
-set -sg escape-time 10
-set -g focus-events on
-set -g clock-mode-style 12
-set -g history-limit 20000
-set -g mouse on
-setw -g mode-keys vi
-
+set -g automatic-rename on
 set -g base-index 1
-setw -g pane-base-index 1
-setw -g automatic-rename on
+set -g clock-mode-style 12
+set -g default-terminal 'screen-256color'
+set -g escape-time 10
+set -g focus-events on
+set -g history-file $HOME/.tmux_history
+set -g history-limit 20000
+set -g mode-keys vi
+set -g mouse on
+set -g pane-base-index 1
 set -g renumber-windows on
-
-set -g set-titles on
-set -g set-titles-string '#S / #W / #T'
+set -g set-clipboard external
 
 unbind C-b
 set -g prefix C-space
 bind C-space send-prefix
+
+bind r {
+  source-file $HOME/.tmux.conf
+  display 'Config reloaded!'
+}
 
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
 bind -r l select-pane -R
 
-bind r source-file $HOME/.tmux.conf \; display 'Config reloaded!'
-bind * confirm-before -p 'kill other windows? (y/n)' 'kill-window -a'
+bind '%' split-window -h -c '#{pane_current_path}'
+bind '"' split-window -v -c '#{pane_current_path}'
+bind '*' confirm-before -p 'kill other windows? (y/n)' 'kill-window -a'
 bind Q confirm-before -p 'kill-session #S? (y/n)' kill-session
 bind X confirm-before kill-server
+bind c new-window -c '#{pane_current_path}' -a -t '{next}'
+
 bind C-p new-window -c '#{pane_current_path}' git-mux project
 bind C-t new-window -c '#{pane_current_path}' git-mux task
-bind c new-window -c '#{pane_current_path}'
-bind % split-window -h -c '#{pane_current_path}'
-bind '"' split-window -v -c '#{pane_current_path}'
 
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel pbcopy
-# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel wl-copy
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind -n M-J display-popup -T ' +#S ' -h 60% -E tmux-popup
-bind -T popup M-J detach
 bind -T popup C-o copy-mode
-bind -T popup M-c new-window -c '#{pane_current_path}'
-bind -T popup M-n next-window
-bind -T popup M-m previous-window
+bind -T popup M-J detach
 bind -T popup M-L run 'tmux move-window -a -t $TMUX_PARENT_SESSION:{next}'
+bind -T popup M-c new-window -c '#{pane_current_path}'
+bind -T popup M-m previous-window
+bind -T popup M-n next-window
+bind -n M-J display-popup -T ' +#S ' -h 60% -E tmux-popup
+
+set -g set-titles on
+set -g set-titles-string '#S / #W / #T'
 
 set -g popup-border-lines rounded
 set -g popup-border-style fg='magenta'
@@ -52,20 +56,20 @@ set -g popup-border-style fg='magenta'
 set -g message-style bg='default',fg='magenta'
 set -g mode-style 'reverse'
 
-set -g pane-border-style fg='black'
 set -g pane-active-border-style fg='colour59'
+set -g pane-border-style fg='black'
 
-set -g @prefix_highlight_fg 'default'
 set -g @prefix_highlight_bg 'default'
+set -g @prefix_highlight_fg 'default'
 
-set -g window-status-current-style 'fg=magenta'
 set -g window-status-activity-style none
+set -g window-status-current-style 'fg=magenta'
 
-set -g status-style bg='default',fg='colour59'
 set -g status-interval 1
 set -g status-left-length 40
-set -g status-right-length 40
 set -g status-right '#{cpu_fg_color}#{cpu_icon} #{cpu_percentage}#[default] #{prefix_highlight}'
+set -g status-right-length 40
+set -g status-style bg='default',fg='colour59'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-cpu'
