--- a/configs/git/.gitconfig
+++ b/configs/git/.gitconfig
@@ -27,7 +27,7 @@
   gpgsign = true
 
 [user]
-  name = Slava Maksimov
+  name = Slava M.
   email = 28267670+slavafyi@users.noreply.github.com
   signingkey = 93BF899239FE0933
 
