--- a/configs/ssh/.ssh/config
+++ b/configs/ssh/.ssh/config
@@ -7,3 +7,7 @@ Host *
   IdentityFile ~/.ssh/id_ed25519
   IdentityFile ~/.ssh/id_ed25519_legacy
   IdentityFile ~/.ssh/id_ed25519_nx
+
+Host nixos
+  RequestTTY yes
+  RemoteCommand tmux new-session -A -s "ssh-$USER"
