feat(configs): ssh add local config

--- a/configs/ssh/.ssh/config
+++ b/configs/ssh/.ssh/config
@@ -1,13 +1,8 @@
 Include ~/.orbstack/ssh/config
+Include ~/.ssh/config.local
 
 Host *
   AddKeysToAgent yes
   ServerAliveInterval 60
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/id_ed25519
-  IdentityFile ~/.ssh/id_ed25519_legacy
-  IdentityFile ~/.ssh/id_ed25519_nx
-
-Host nixos
-  RequestTTY yes
-  RemoteCommand tmux new-session -A -s "ssh-$USER"
